Upgrade test harness.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,9 +1,3 @@
 ---
 #<% require 'poise_boiler' %>
-<%= PoiseBoiler.kitchen(platforms: 'linux') %>
-
-suites:
-- name: default
-  run_list:
-  - recipe[application_javascript_test]
-  - recipe[application_javascript_test::express]
+<%= PoiseBoiler.kitchen %>
